--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             height: 98vh;
             margin: 0;
             background-color: #f2f2f2;
-            font-family: Arial, sans-serif; /* Cambia el tipo de fuente */
+            font-family: Arial, sans-serif;
         }
         .container {
             display: flex;
@@ -122,7 +122,7 @@
             const text = textArea.value;
             const cleanedText = text
                 .split('\n')
-                .filter(line => line.trim() !== "" && !line.includes("com.auctionaces.") && !line.includes("testsYetToMove."))
+                .filter(line => line.trim() !== "" && !line.includes("com.") && !line.includes("testsYetToMove."))
                 .join('\n');
             textArea.value = cleanedText;
         }
